--- a/nets_final_html/write-review.html
+++ b/nets_final_html/write-review.html
@@ -204,11 +204,11 @@ var STYLE_PREFIX = 'wsite';
 <div><div class="wsite-form-field" style="margin:5px 0px 0px 0px;">
   <label class="wsite-form-label" for="input-998532217612885925">Rate this Professor's Difficulty. <span class="form-required">*</span></label>
   <div class="wsite-form-radio-container">
-    <span class='form-radio-container'><input type='radio' id='radio-0-_u998532217612885925' name='_u998532217612885925' value='1' /><label for='radio-0-_u998532217612885925'>1</label></span>
-<span class='form-radio-container'><input type='radio' id='radio-1-_u998532217612885925' name='_u998532217612885925' value='2' /><label for='radio-1-_u998532217612885925'>2</label></span>
-<span class='form-radio-container'><input type='radio' id='radio-2-_u998532217612885925' name='_u998532217612885925' value='3' /><label for='radio-2-_u998532217612885925'>3</label></span>
-<span class='form-radio-container'><input type='radio' id='radio-3-_u998532217612885925' name='_u998532217612885925' value='4' /><label for='radio-3-_u998532217612885925'>4</label></span>
-<span class='form-radio-container'><input type='radio' id='radio-4-_u998532217612885925' name='_u998532217612885925' value='5' /><label for='radio-4-_u998532217612885925'>5</label></span>
+    <span class='form-radio-container'><input type='radio' id='radio-0-_difficulty' name='_difficulty' value='1' /><label for='radio-0-_difficulty'>1</label></span>
+<span class='form-radio-container'><input type='radio' id='radio-1-_difficulty' name='_difficulty' value='2' /><label for='radio-1-_difficulty'>2</label></span>
+<span class='form-radio-container'><input type='radio' id='radio-2-_difficulty' name='_difficulty' value='3' /><label for='radio-2-_difficulty'>3</label></span>
+<span class='form-radio-container'><input type='radio' id='radio-3-_difficulty' name='_difficulty' value='4' /><label for='radio-3-_difficulty'>4</label></span>
+<span class='form-radio-container'><input type='radio' id='radio-4-_difficulty' name='_difficulty' value='5' /><label for='radio-4-_difficulty'>5</label></span>
 
   </div>
   <div id="instructions-Rate this Professor's Difficulty." class="wsite-form-instructions" style="display:none;">5 being most difficult</div>
@@ -217,14 +217,40 @@ var STYLE_PREFIX = 'wsite';
 <div><div class="wsite-form-field" style="margin:5px 0px 0px 0px;">
   <label class="wsite-form-label" for="input-425946452607463899">Rate this Professor's Helpfulness. <span class="form-required">*</span></label>
   <div class="wsite-form-radio-container">
-    <span class='form-radio-container'><input type='radio' id='radio-0-_u425946452607463899' name='_u425946452607463899' value='1' /><label for='radio-0-_u425946452607463899'>1</label></span>
-<span class='form-radio-container'><input type='radio' id='radio-1-_u425946452607463899' name='_u425946452607463899' value='2' /><label for='radio-1-_u425946452607463899'>2</label></span>
-<span class='form-radio-container'><input type='radio' id='radio-2-_u425946452607463899' name='_u425946452607463899' value='3' /><label for='radio-2-_u425946452607463899'>3</label></span>
-<span class='form-radio-container'><input type='radio' id='radio-3-_u425946452607463899' name='_u425946452607463899' value='4' /><label for='radio-3-_u425946452607463899'>4</label></span>
-<span class='form-radio-container'><input type='radio' id='radio-4-_u425946452607463899' name='_u425946452607463899' value='5' /><label for='radio-4-_u425946452607463899'>5</label></span>
+    <span class='form-radio-container'><input type='radio' id='radio-0-_helpfulness' name='_helpfulness' value='1' /><label for='radio-0-_helpfulness'>1</label></span>
+<span class='form-radio-container'><input type='radio' id='radio-helpfulness-2' name='_u425946452607463899' value='2' /><label for='radio-1-_u425946452607463899'>2</label></span>
+<span class='form-radio-container'><input type='radio' id='radio-helpfulness-3' name='_u425946452607463899' value='3' /><label for='radio-2-_u425946452607463899'>3</label></span>
+<span class='form-radio-container'><input type='radio' id='radio-helpfulness-4' name='_u425946452607463899' value='4' /><label for='radio-3-_u425946452607463899'>4</label></span>
+<span class='form-radio-container'><input type='radio' id='radio-helpfulness-5' name='_u425946452607463899' value='5' /><label for='radio-4-_u425946452607463899'>5</label></span>
 
   </div>
   <div id="instructions-Rate this Professor's Helpfulness." class="wsite-form-instructions" style="display:none;">5 being most helpful</div>
+</div></div>
+
+<div><div class="wsite-form-field" style="margin:5px 0px 0px 0px;">
+  <label class="wsite-form-label" for="input-425946452607463899">Rate this Professor's Engagement. <span class="form-required">*</span></label>
+  <div class="wsite-form-radio-container">
+    <span class='form-radio-container'><input type='radio' id='radio-engagement-1' name='_u425946452607463899' value='1' /><label for='radio-0-_u425946452607463899'>1</label></span>
+<span class='form-radio-container'><input type='radio' id='radio-engagement-2' name='_u425946452607463899' value='2' /><label for='radio-1-_u425946452607463899'>2</label></span>
+<span class='form-radio-container'><input type='radio' id='radio-engagement-3' name='_u425946452607463899' value='3' /><label for='radio-2-_u425946452607463899'>3</label></span>
+<span class='form-radio-container'><input type='radio' id='radio-engagement-4' name='_u425946452607463899' value='4' /><label for='radio-3-_u425946452607463899'>4</label></span>
+<span class='form-radio-container'><input type='radio' id='radio-engagement-5' name='_u425946452607463899' value='5' /><label for='radio-4-_u425946452607463899'>5</label></span>
+
+  </div>
+  <div id="instructions-Rate this Professor's Engagement." class="wsite-form-instructions" style="display:none;">5 being most engagement</div>
+</div></div>
+
+<div><div class="wsite-form-field" style="margin:5px 0px 0px 0px;">
+  <label class="wsite-form-label" for="input-425946452607463899">Rate this Professor's Overall Quality. <span class="form-required">*</span></label>
+  <div class="wsite-form-radio-container">
+    <span class='form-radio-container'><input type='radio' id='radio-overall-1' name='_u425946452607463899' value='1' /><label for='radio-0-_u425946452607463899'>1</label></span>
+<span class='form-radio-container'><input type='radio' id='radio-overall-2' name='_u425946452607463899' value='2' /><label for='radio-1-_u425946452607463899'>2</label></span>
+<span class='form-radio-container'><input type='radio' id='radio-overall-3' name='_u425946452607463899' value='3' /><label for='radio-2-_u425946452607463899'>3</label></span>
+<span class='form-radio-container'><input type='radio' id='radio-overall-4' name='_u425946452607463899' value='4' /><label for='radio-3-_u425946452607463899'>4</label></span>
+<span class='form-radio-container'><input type='radio' id='radio-overall-5' name='_u425946452607463899' value='5' /><label for='radio-4-_u425946452607463899'>5</label></span>
+
+  </div>
+  <div id="instructions-Rate this Professor's Overall Quality." class="wsite-form-instructions" style="display:none;">5 being highest quality</div>
 </div></div>
 
 <div><div class="wsite-form-field" style="margin:5px 0px 5px 0px;">
