--- a/nets_final_html/write-review.html
+++ b/nets_final_html/write-review.html
@@ -218,10 +218,10 @@ var STYLE_PREFIX = 'wsite';
   <label class="wsite-form-label" for="input-425946452607463899">Rate this Professor's Helpfulness. <span class="form-required">*</span></label>
   <div class="wsite-form-radio-container">
     <span class='form-radio-container'><input type='radio' id='radio-0-_helpfulness' name='_helpfulness' value='1' /><label for='radio-0-_helpfulness'>1</label></span>
-<span class='form-radio-container'><input type='radio' id='radio-helpfulness-2' name='_u425946452607463899' value='2' /><label for='radio-1-_u425946452607463899'>2</label></span>
-<span class='form-radio-container'><input type='radio' id='radio-helpfulness-3' name='_u425946452607463899' value='3' /><label for='radio-2-_u425946452607463899'>3</label></span>
-<span class='form-radio-container'><input type='radio' id='radio-helpfulness-4' name='_u425946452607463899' value='4' /><label for='radio-3-_u425946452607463899'>4</label></span>
-<span class='form-radio-container'><input type='radio' id='radio-helpfulness-5' name='_u425946452607463899' value='5' /><label for='radio-4-_u425946452607463899'>5</label></span>
+<span class='form-radio-container'><input type='radio' id='radio-1-_helpfulness' name='_helpfulness' value='2' /><label for='radio-1-_helpfulness'>2</label></span>
+<span class='form-radio-container'><input type='radio' id='radio-2-_helpfulness' name='_helpfulness' value='3' /><label for='radio-2-_helpfulness'>3</label></span>
+<span class='form-radio-container'><input type='radio' id='radio-3-_helpfulness' name='_helpfulness' value='4' /><label for='radio-3-_helpfulness'>4</label></span>
+<span class='form-radio-container'><input type='radio' id='radio-4-_helpfulness' name='_helpfulness' value='5' /><label for='radio-4-_helpfulness'>5</label></span>
 
   </div>
   <div id="instructions-Rate this Professor's Helpfulness." class="wsite-form-instructions" style="display:none;">5 being most helpful</div>
@@ -230,11 +230,11 @@ var STYLE_PREFIX = 'wsite';
 <div><div class="wsite-form-field" style="margin:5px 0px 0px 0px;">
   <label class="wsite-form-label" for="input-425946452607463899">Rate this Professor's Engagement. <span class="form-required">*</span></label>
   <div class="wsite-form-radio-container">
-    <span class='form-radio-container'><input type='radio' id='radio-engagement-1' name='_u425946452607463899' value='1' /><label for='radio-0-_u425946452607463899'>1</label></span>
-<span class='form-radio-container'><input type='radio' id='radio-engagement-2' name='_u425946452607463899' value='2' /><label for='radio-1-_u425946452607463899'>2</label></span>
-<span class='form-radio-container'><input type='radio' id='radio-engagement-3' name='_u425946452607463899' value='3' /><label for='radio-2-_u425946452607463899'>3</label></span>
-<span class='form-radio-container'><input type='radio' id='radio-engagement-4' name='_u425946452607463899' value='4' /><label for='radio-3-_u425946452607463899'>4</label></span>
-<span class='form-radio-container'><input type='radio' id='radio-engagement-5' name='_u425946452607463899' value='5' /><label for='radio-4-_u425946452607463899'>5</label></span>
+    <span class='form-radio-container'><input type='radio' id='radio-0-_engagement' name='_engagement' value='1' /><label for='radio-0-_engagement'>1</label></span>
+<span class='form-radio-container'><input type='radio' id='radio-1-_engagement' name='_engagement' value='2' /><label for='radio-1-_engagement'>2</label></span>
+<span class='form-radio-container'><input type='radio' id='radio-2-_engagement' name='_engagement' value='3' /><label for='radio-2-_engagement'>3</label></span>
+<span class='form-radio-container'><input type='radio' id='radio-3-_engagement' name='_engagement' value='4' /><label for='radio-3-_engagement'>4</label></span>
+<span class='form-radio-container'><input type='radio' id='radio-4-_engagement' name='_engagement' value='5' /><label for='radio-4-_engagement'>5</label></span>
 
   </div>
   <div id="instructions-Rate this Professor's Engagement." class="wsite-form-instructions" style="display:none;">5 being most engagement</div>
@@ -243,11 +243,11 @@ var STYLE_PREFIX = 'wsite';
 <div><div class="wsite-form-field" style="margin:5px 0px 0px 0px;">
   <label class="wsite-form-label" for="input-425946452607463899">Rate this Professor's Overall Quality. <span class="form-required">*</span></label>
   <div class="wsite-form-radio-container">
-    <span class='form-radio-container'><input type='radio' id='radio-overall-1' name='_u425946452607463899' value='1' /><label for='radio-0-_u425946452607463899'>1</label></span>
-<span class='form-radio-container'><input type='radio' id='radio-overall-2' name='_u425946452607463899' value='2' /><label for='radio-1-_u425946452607463899'>2</label></span>
-<span class='form-radio-container'><input type='radio' id='radio-overall-3' name='_u425946452607463899' value='3' /><label for='radio-2-_u425946452607463899'>3</label></span>
-<span class='form-radio-container'><input type='radio' id='radio-overall-4' name='_u425946452607463899' value='4' /><label for='radio-3-_u425946452607463899'>4</label></span>
-<span class='form-radio-container'><input type='radio' id='radio-overall-5' name='_u425946452607463899' value='5' /><label for='radio-4-_u425946452607463899'>5</label></span>
+    <span class='form-radio-container'><input type='radio' id='radio-0_overall' name='_overall' value='1' /><label for='radio-0_overall'>1</label></span>
+<span class='form-radio-container'><input type='radio' id='radio-1_overall' name='_overall' value='2' /><label for='radio-1_overall'>2</label></span>
+<span class='form-radio-container'><input type='radio' id='radio-2_overall' name='_overall' value='3' /><label for='radio-2_overall'>3</label></span>
+<span class='form-radio-container'><input type='radio' id='radio-3_overall' name='_overall' value='4' /><label for='radio-3_overall'>4</label></span>
+<span class='form-radio-container'><input type='radio' id='radio-4_overall' name='_overall' value='5' /><label for='radio-4_overall'>5</label></span>
 
   </div>
   <div id="instructions-Rate this Professor's Overall Quality." class="wsite-form-instructions" style="display:none;">5 being highest quality</div>
