everything kinda works (login/logout functionality, professor/review input to database)

--- a/nets_final_html/index.html
+++ b/nets_final_html/index.html
@@ -134,6 +134,8 @@ var STYLE_PREFIX = 'wsite';
 			<a href="login.html"
 				
 				class="wsite-menu-item"
+				id = "loginId"
+				style="float:right!important;"
 				>
 				Login
 			</a>
@@ -235,7 +237,7 @@ var STYLE_PREFIX = 'wsite';
 	<script type="text/javascript" src="files/theme/plugins.js"></script>
 	<script type="text/javascript" src="files/theme/custom.js"></script>
 	<script type="text/javascript" src="files/theme/mobile.js"></script>
-
+	<script type="text/javascript" src="files/theme/nav_bar.js"></script>
 		
 		
 	</body>
