--- a/nets_final_html/login.html
+++ b/nets_final_html/login.html
@@ -136,6 +136,8 @@ var STYLE_PREFIX = 'wsite';
 			<a href="login.html"
 				
 				class="wsite-menu-item"
+				id = "loginId"
+				style="float:right;"
 				>
 				Login
 			</a>
@@ -257,6 +259,7 @@ var STYLE_PREFIX = 'wsite';
 	<script type="text/javascript" src="files/theme/plugins.js"></script>
 	<script type="text/javascript" src="files/theme/custom.js"></script>
 	<script type="text/javascript" src="files/theme/mobile.js"></script>
+	<script type="text/javascript" src="files/theme/nav_bar.js"></script>
 	<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
     <script src="js_login/index.js"></script>
