log out functionality

--- a/nets_final_html/index.html
+++ b/nets_final_html/index.html
@@ -136,6 +136,7 @@ var STYLE_PREFIX = 'wsite';
 				class="wsite-menu-item"
 				id = "loginId"
 				style="float:right!important;"
+				onclick="logout()"
 				>
 			</a>
 			
