--- a/nets_final_html/login.html
+++ b/nets_final_html/login.html
@@ -138,6 +138,7 @@ var STYLE_PREFIX = 'wsite';
 				class="wsite-menu-item"
 				id = "loginId"
 				style="float:right;"
+				onclick="logout()"
 				>
 			</a>
 			
