--- a/nets_final_html/professor-page.html
+++ b/nets_final_html/professor-page.html
@@ -133,6 +133,7 @@ var STYLE_PREFIX = 'wsite';
 				
 				class="wsite-menu-item"
 				style="float:right!important;"
+				onclick="logout()"
 				id="loginId"
 				>
 			</a>
