--- a/nets_final_html/write-review.html
+++ b/nets_final_html/write-review.html
@@ -131,12 +131,11 @@ var STYLE_PREFIX = 'wsite';
 		</li>
 		<li id="pg874054255483529471"
 			class="wsite-menu-item-wrap"
-			style="float:right;"
-			>
+			style="float:right;">
 			<a href="login.html"
-				
 				class="wsite-menu-item"
 				id ="loginId"
+				onclick="logout()"
 				>
 			</a>
 			
