fixing user structure

--- a/nets_final_html/login.html
+++ b/nets_final_html/login.html
@@ -183,13 +183,13 @@ var STYLE_PREFIX = 'wsite';
       <input id = "register_username_id" class="register_username" type="text" placeholder="username"/>
       <input id = "register_password_id" class="register_password" type="password" placeholder="password"/>
       <input id = "register_email_id" class="register_email" type="text" placeholder="email address"/>
-      <button onclick="register()" class = "register_button"><!-- <a href="index.html"> -->Register<!-- </a> --></button>
+      <button onclick="register()" class = "register_button">Register</button>
       <p class="message">Already registered? <a href="#">Sign In</a></p>
     </form>
     <form class="login-form">
       <input id="email_id" class="login_username" type="text" placeholder="email"/>
       <input id = "password_id" class="login_password" type="password" placeholder="password"/>
-      <button onclick="login()" class="login_button"><!-- <a href="index.html"> -->Login<!-- </a> --></button>
+      <button onclick="login()" class="login_button">Login</button>
       <p class="message">Not registered? <a href="#">Create an account</a></p>
     </form>
   </div>
