fix login, alignment

--- a/nets_final_html/index.html
+++ b/nets_final_html/index.html
@@ -130,12 +130,12 @@ var STYLE_PREFIX = 'wsite';
 		</li>
 		<li id="pg874054255483529471"
 			class="wsite-menu-item-wrap"
+			style="float:right;"
 			>
 			<a href="login.html"
 				
 				class="wsite-menu-item"
 				id = "loginId"
-				style="float:right!important;"
 				onclick="logout()"
 				>
 			</a>
