--- a/nets_final_html/professor-page.html
+++ b/nets_final_html/professor-page.html
@@ -128,11 +128,11 @@ var STYLE_PREFIX = 'wsite';
 		</li>
 		<li id="pg874054255483529471"
 			class="wsite-menu-item-wrap"
+			style="float:right;"
 			>
 			<a href="login.html"
 				
 				class="wsite-menu-item"
-				style="float:right!important;"
 				onclick="logout()"
 				id="loginId"
 				>
