weird login error fixed

--- a/nets_final_html/index.html
+++ b/nets_final_html/index.html
@@ -132,7 +132,7 @@ var STYLE_PREFIX = 'wsite';
 			class="wsite-menu-item-wrap"
 			style="float:right;"
 			>
-			<a href="login.html"
+			<a href="login.html?#"
 				
 				class="wsite-menu-item"
 				id = "loginId"
@@ -169,7 +169,7 @@ var STYLE_PREFIX = 'wsite';
 	<span id="selectionBoundary_1460927954485_5664991199618068">﻿</span>Rate your professors or learn more about which professors at penn are the best!
 </span></p>
 					<div class="button-wrap"><div style="text-align:left;"><div style="height: 0px; overflow: hidden;"></div>
-<a class="wsite-button wsite-button-large wsite-button-highlight" href="login.html" >
+<a class="wsite-button wsite-button-large wsite-button-highlight" href="login.html?#" >
 <span class="wsite-button-inner">Login</span>
 </a>
 <div style="height: 0px; overflow: hidden;"></div></div></div>
@@ -222,7 +222,7 @@ var STYLE_PREFIX = 'wsite';
 		<li id="pg874054255483529471"
 			class="wsite-menu-item-wrap"
 			>
-			<a href="login.html"
+			<a href="login.html?#"
 				
 				class="wsite-menu-item"
 				>
