--- a/nets_final_html/login.html
+++ b/nets_final_html/login.html
@@ -134,7 +134,7 @@ var STYLE_PREFIX = 'wsite';
 			class="wsite-menu-item-wrap"
 			style="float:right;"
 			>
-			<a href="login.html"
+			<a href="login.html?#"
 				
 				class="wsite-menu-item"
 				id = "loginId"
@@ -243,7 +243,7 @@ var STYLE_PREFIX = 'wsite';
 		<li id="active"
 			class="wsite-menu-item-wrap"
 			>
-			<a href="login.html"
+			<a href="login.html?#"
 				
 				class="wsite-menu-item"
 				>
