--- a/nets_final_html/professor-page.html
+++ b/nets_final_html/professor-page.html
@@ -130,7 +130,7 @@ var STYLE_PREFIX = 'wsite';
 			class="wsite-menu-item-wrap"
 			style="float:right;"
 			>
-			<a href="login.html"
+			<a href="login.html?#"
 				
 				class="wsite-menu-item"
 				onclick="logout()"
@@ -257,7 +257,7 @@ var STYLE_PREFIX = 'wsite';
 		<li id="pg874054255483529471"
 			class="wsite-menu-item-wrap"
 			>
-			<a href="login.html"
+			<a href="login.html?#"
 				
 				class="wsite-menu-item"
 				>
