--- a/nets_final_html/write-review.html
+++ b/nets_final_html/write-review.html
@@ -132,7 +132,7 @@ var STYLE_PREFIX = 'wsite';
 		<li id="pg874054255483529471"
 			class="wsite-menu-item-wrap"
 			style="float:right;">
-			<a href="login.html"
+			<a href="login.html?#"
 				class="wsite-menu-item"
 				id ="loginId"
 				onclick="logout()"
@@ -318,7 +318,7 @@ var STYLE_PREFIX = 'wsite';
 		<li id="pg874054255483529471"
 			class="wsite-menu-item-wrap"
 			>
-			<a href="login.html"
+			<a href="login.html?#"
 				
 				class="wsite-menu-item"
 				>
