--- a/nets_final_html/professor-page.html
+++ b/nets_final_html/professor-page.html
@@ -273,6 +273,7 @@ var STYLE_PREFIX = 'wsite';
 	<script type="text/javascript" src="files/theme/custom.js"></script>
 	<script type="text/javascript" src="files/theme/mobile.js"></script>
 	<script type="text/javascript" src="files/theme/nav_bar.js"></script>
+	<script type="text/javascript" src="js_professor-page/prof_page.js"></script>
 
 <div style='display:none'>Create a <a target="_top" href="http://www.weebly.com/">free web site</a> with <a target="_top" href="http://www.weebly.com/" title="free web site">Weebly</a></div>
 
