updates to prof_page

--- a/nets_final_html/professor-page.html
+++ b/nets_final_html/professor-page.html
@@ -159,8 +159,8 @@ var STYLE_PREFIX = 'wsite';
 	
 	</a>
 
-</span><div id='wsite-content' class='wsite-elements wsite-not-footer'>
-<h2 class="wsite-content-title" style="text-align:left;"><font size="7">Professor -----</font></h2>
+</span><div id='wsite-content' class='wsite-elements wsite-not-footer'><div id="input-948407724571952700">
+<h2 class="wsite-content-title" for="input-948407724571952700" style="text-align:left;"><font size="7">-----</font></h2> </div>
 
 <div class="paragraph" style="text-align:left;"><font size="5"><span>Overall: 4.5</span></font></div>
 
