professor page pseudocode

--- a/nets_final_html/professor-page.html
+++ b/nets_final_html/professor-page.html
@@ -160,6 +160,18 @@ var STYLE_PREFIX = 'wsite';
 	</a>
 
 </span><div id='wsite-content' class='wsite-elements wsite-not-footer'>
+
+<div class="search_form_div" style="float:center;">
+<form class="search_form">
+      <input id="search_id" class="search_box" type="text" placeholder="Search professors..."/>
+      <button onclick="pull_info()" class="search_button">Search</button>
+</form>
+</div>
+
+<!--start prof info-->
+
+<div class="outer-div-prof-info" style="display:none;">
+
 <h2 class="wsite-content-title" style="text-align:left;"><font size="7">Professor -----</font></h2>
 
 <div class="paragraph" style="text-align:left;"><font size="5"><span>Overall: 4.5</span></font></div>
