--- a/nets_final_html/professor-page.html
+++ b/nets_final_html/professor-page.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Professor Page - University of Pennsylvania</title>
 		<script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
+		<link rel="stylesheet" href="css_professor-page/style.css">
 
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
