quality control buttons

--- a/nets_final_html/professor-page.html
+++ b/nets_final_html/professor-page.html
@@ -216,7 +216,7 @@ var STYLE_PREFIX = 'wsite';
 
 <div class="paragraph" style="text-align:left;"><font size="5">Top Reviews:</font></div>
 
-<div class="paragraph" style="text-align:left;">Review Score: A<br />&#8203;Overall Quality: 4.0<br /><font size="1">Difficulty:<br />Helpfulness:<br />Engagement:</font><br /><span><font size="1">Review:</font></span></div>
+<div class="paragraph" style="text-align:left;">Review Score:<br />&#8203;Overall Quality: 4.0 <button onclick="upvote()" id="upvote_id" class="vote_button">Upvote</button> <button onclick="downvote()" id="downvote_id" class="vote_button">Downvote</button><br id="difficulty_score"/><font size="1">Difficulty:<br id="helpfulness_score"/>Helpfulness:<br id="engagement_score"/>Engagement:</font><br /><span><font size="1">Review:</font></span></div>
 
 <div><div style="height: 20px; overflow: hidden; width: 100%;"></div>
 <hr class="styled-hr" style="width:100%;"></hr>
