--- a/nets_final_html/professor-page.html
+++ b/nets_final_html/professor-page.html
@@ -231,10 +231,10 @@ var STYLE_PREFIX = 'wsite';
 	</table>
 </div></div></div>
 
-<div class="paragraph" style="text-align:left;"><font size="5">Classes Taught:</font></div>
+<!-- <div class="paragraph" style="text-align:left;"><font size="5">Classes Taught:</font></div> -->
 
-<div class="paragraph" style="text-align:left;">MGMT 237<br />Hi<br />Hi<br />&#8203;Hi<br /></div>
-
+<!-- <div class="paragraph" style="text-align:left;">MGMT 237<br />Hi<br />Hi<br />&#8203;Hi<br /></div>
+ -->
 <div class="paragraph" style="text-align:left;"><font size="5">Top Reviews:</font></div>
 
 <div class="outer-div-reviews" id="reviews-parent-id">
@@ -245,8 +245,7 @@ var STYLE_PREFIX = 'wsite';
 <div style="height: 20px; overflow: hidden; width: 100%;"></div></div>
 
 </div>
-
-<div class="paragraph" style="text-align:left;"><span>REVIEW SCORE: B</span><br /><span>&#8203;OVERALL QUALITY: 4.0</span><br /><font size="1">DIFFICULTY:<br />HELPFULNESS:<br />ENGAGEMENT:</font><br /><span><font size="1">REVIEW:</font></span></div></div>
+</div>
 </div>
 			</div>
 		
