final removal of boxes and such

--- a/nets_final_html/professor-page.html
+++ b/nets_final_html/professor-page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<head>
+	<head id="head_element_id">
 		<title>Professor Page - University of Pennsylvania</title>
 		<script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 		<link rel="stylesheet" href="css_professor-page/style.css">
@@ -300,6 +300,7 @@ var STYLE_PREFIX = 'wsite';
 	<script type="text/javascript" src="files/theme/mobile.js"></script>
 	<script type="text/javascript" src="files/theme/nav_bar.js"></script>
 	<script type="text/javascript" src="js_professor-page/prof_page.js"></script>
+
 
 <div style='display:none'>Create a <a target="_top" href="http://www.weebly.com/">free web site</a> with <a target="_top" href="http://www.weebly.com/" title="free web site">Weebly</a></div>
 
