--- a/nets_final_html/write-review.html
+++ b/nets_final_html/write-review.html
@@ -189,7 +189,7 @@ var STYLE_PREFIX = 'wsite';
 				<div id="instructions-948407724571952700" class="wsite-form-instructions" style="display:none;"></div>
 			</div></div>
 
-<div><div class="wsite-form-field" style="margin:5px 0px 0px 0px;">
+<!-- <div><div class="wsite-form-field" style="margin:5px 0px 0px 0px;">
   <label class="wsite-form-label" for="input-603754659853359667">Which class are you reviewing? <span class="form-required">*</span></label>
   <div class="wsite-form-radio-container">
     <select name='_u603754659853359667' class='form-select'>
@@ -200,7 +200,7 @@ var STYLE_PREFIX = 'wsite';
 
   </div>
   <div id="instructions-Which class are you reviewing?" class="wsite-form-instructions" style="display:none;"></div>
-</div></div>
+</div></div> -->
 
 <div><div class="wsite-form-field" style="margin:5px 0px 0px 0px;">
   <label class="wsite-form-label" for="input-998532217612885925">Rate this Professor's Difficulty. <span class="form-required">*</span></label>
